Comment fifth photo block for using only if needed for testing

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                         <p>Sr. UI Designer</p>
                     </li>
                 </a>
-                <a href="#">
+<!--                 <a href="#">
                     <li>
                         <img src="img/team-4.jpg">
                         <h3>Steve Flaukin</h3>
                         <p>Sr. UI Designer</p>
                     </li>
-                </a>
+                </a> -->
             </ul>
         </div>
         <div class="clear"></div>
