Use clearfix on parent element instead of extra div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header-background">
         <div>
-            <div class="header">
+            <div class="header clear">
                 <a href=""><div class="header-logo">CompanyName</div></a>
                 <nav>
                     <ul>
@@ -22,7 +22,6 @@
                         <a href="#"><li>Contact</li></a>
                     </ul>
                 </nav>
-                <div class="clear"></div>
             </div>
         </div>
         <div class="header-notes">
@@ -33,47 +32,36 @@
         <h2>Meet out teem</h2>
         <div class="hr-background"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ligula in consectetur vestibulum. Integer vel porta dolor, vel malesuada mi. Fusce sagittis magna pharetra.</p>
-        <div class="photos">
+        <div class="photos clear">
             <ul>
-                <a href="#">
-                    <li>
-                        <img src="img/team-1.jpg">
-                        <h3>John Filmr Doe</h3>
-                        <p>Managing Director</p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <img src="img/team-2.jpg">
-                        <h3>Chystine Hineu</h3>
-                        <p>Lead Designer</p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <img src="img/team-3.jpg">
-                        <h3>Martin Matrone</h3>
-                        <p>Lead Developer</p>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <img src="img/team-4.jpg">
-                        <h3>Steve Flaukin</h3>
-                        <p>Sr. UI Designer</p>
-                    </li>
-                </a>
-<!--                 <a href="#">
-                    <li>
-                        <img src="img/team-4.jpg">
-                        <h3>Steve Flaukin</h3>
-                        <p>Sr. UI Designer</p>
-                    </li>
-                </a> -->
+                <li>
+                    <img src="img/team-1.jpg">
+                    <h3>John Filmr Doe</h3>
+                    <p>Managing Director</p>
+                </li>
+                <li>
+                    <img src="img/team-2.jpg">
+                    <h3>Chystine Hineu</h3>
+                    <p>Lead Designer</p>
+                </li>
+                <li>
+                    <img src="img/team-3.jpg">
+                    <h3>Martin Matrone</h3>
+                    <p>Lead Developer</p>
+                </li>
+                <li>
+                    <img src="img/team-4.jpg">
+                    <h3>Steve Flaukin</h3>
+                    <p>Sr. UI Designer</p>
+                </li>
+<!--                 <li>
+                    <img src="img/team-4.jpg">
+                    <h3>Steve Flaukin</h3>
+                    <p>Sr. UI Designer</p>
+                </li> -->
             </ul>
         </div>
-        <div class="clear"></div>
-        <div class="slider">
+        <div class="slider clear">
             <ul>
                 <li class="active"></li>
                 <li></li>
@@ -81,7 +69,6 @@
                 <li></li>
             </ul>
         </div>
-        <div class="clear"></div>
     </div>
     <div class="footer">
         <div class="row-1">
