Fix content area and footer a bit

--- a/index.html
+++ b/index.html
@@ -35,29 +35,39 @@
         <div class="photos clear">
             <ul>
                 <li>
-                    <img src="img/team-1.jpg">
-                    <h3>John Filmr Doe</h3>
-                    <p>Managing Director</p>
+                    <a href="#">
+                        <img src="img/team-1.jpg">
+                        <h3>John Filmr Doe</h3>
+                        <p>Managing Director</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="img/team-2.jpg">
-                    <h3>Chystine Hineu</h3>
-                    <p>Lead Designer</p>
+                    <a href="#">
+                        <img src="img/team-2.jpg">
+                        <h3>Chystine Hineu</h3>
+                        <p>Lead Designer</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="img/team-3.jpg">
-                    <h3>Martin Matrone</h3>
-                    <p>Lead Developer</p>
+                    <a href="#">
+                        <img src="img/team-3.jpg">
+                        <h3>Martin Matrone</h3>
+                        <p>Lead Developer</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="img/team-4.jpg">
-                    <h3>Steve Flaukin</h3>
-                    <p>Sr. UI Designer</p>
+                    <a href="#">
+                        <img src="img/team-4.jpg">
+                        <h3>Steve Flaukin</h3>
+                        <p>Sr. UI Designer</p>
+                    </a>
                 </li>
 <!--                 <li>
-                    <img src="img/team-4.jpg">
-                    <h3>Steve Flaukin</h3>
-                    <p>Sr. UI Designer</p>
+                    <a href="#">
+                        <img src="img/team-4.jpg">
+                        <h3>Steve Flaukin</h3>
+                        <p>Sr. UI Designer</p>
+                    </a>
                 </li> -->
             </ul>
         </div>
@@ -71,20 +81,28 @@
         </div>
     </div>
     <div class="footer">
-        <div class="row-1">
-            <div class="column-1"></div>
-            <div class="column-2">Subscribe</div>
-            <div class="column-3">Explore</div>
-        </div>
-        <div class="row-2">
-            <div class="column-1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et velit sem. Curabitur dictum massa eu velit pretium, nec pretium lectus auctor. Duis eget turpis dolor. Aliquam semper et nisi facilisis convallis. In at urna magna. Fusce vel sem ante.</p></div>
-            <div class="column-2">
-                <input type="text" placeholder="Enter your e-mail">
-                <button></button>&thinsp;
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et velit sem.</p>
+        <div>
+            <div class="column">
+                <div class="column-title">&thinsp;</div>
+                <div class="column-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et velit sem. Curabitur dictum massa eu velit pretium, nec pretium lectus auctor. Duis eget turpis dolor. Aliquam semper et nisi facilisis convallis. In at urna magna. Fusce vel sem ante.</p>
+                </div>
             </div>
-            <div class="column-3">
-                <div class="list-of-resources">
+            <div class="column">
+                <div class="column-title">Subscribe</div>
+                <div class="column-content">
+                    <div class="clear">
+                        <input type="text" placeholder="Enter your e-mail">
+                        <button class="clear"></button><!-- &thinsp; -->
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et velit sem.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="column-title">Explore</div>
+                <div class="column-content list-of-resources">
                     <div>
                         <div><a href="#">Envato</a></div>
                         <div><a href="#">Themeforest</a></div>
