Make photo block flexible with a bit of JS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
     <div class="header-background">
@@ -33,7 +34,7 @@
         <div class="hr-background"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pellentesque ligula in consectetur vestibulum. Integer vel porta dolor, vel malesuada mi. Fusce sagittis magna pharetra.</p>
         <div class="photos clear">
-            <ul>
+            <ul id="stuff-list">
                 <li>
                     <a href="#">
                         <img src="img/team-1.jpg">
@@ -93,7 +94,7 @@
                 <div class="column-content">
                     <div class="clear">
                         <input type="text" placeholder="Enter your e-mail">
-                        <button class="clear"></button><!-- &thinsp; -->
+                        <button class="clear"></button>
                     </div>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et velit sem.</p>
